--- a/Dockerfile-crimemap-ui
+++ b/Dockerfile-crimemap-ui
@@ -1,5 +1,5 @@
 FROM openjdk:8-alpine
-RUN mkdir -p /opt/crimemap-ui
-WORKDIR /opt/crimemap-ui
-COPY crimemap-ui/target/crimemap-ui-0.0.1-SNAPSHOT.jar /opt/crimemap-ui
-CMD ["java", "-jar", "crimemap-ui-0.0.1-SNAPSHOT.jar"]
+RUN mkdir -p /opt/crimemap-webui
+WORKDIR /opt/crimemap-webui
+COPY crimemap-ui/target/crimemap-webui-0.0.1-SNAPSHOT.jar /opt/crimemap-webui
+CMD ["java", "-jar", "crimemap-webui-0.0.1-SNAPSHOT.jar"]
