First backend implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 # --- Server port
 server.port=8080
 
-# --- Crimemap backend config
-backend.host=${BACKEND_HOST:crimemap-backend}
-backend.port=${BACKEND_PORT:8090}
-backend.url=http://${backend.host}:${backend.port}
+# --- Database config
+#spring.datasource.url=jdbc:postgresql://localhost:5432/crimemap
+#spring.datasource.username=hft
+#spring.datasource.password=hft_2021!
+spring.datasource.url=jdbc:mysql://localhost:3306/crimemap
+spring.datasource.username=hft
+spring.datasource.password=hft
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # --- Actuator
 management.endpoints.web.exposure.include=*
@@ -13,4 +18,7 @@ management.endpoints.web.exposure.include=*
 #server.error.include-exception=true
 server.error.include-message=always
 #server.error.include-stacktrace=always
+
+# --- Logging
+logging.level.de.hft=DEBUG
 
