Some server settings added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-# --- Server port
+# --- Server settings
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+server.tomcat.uri-encoding=UTF-8
 server.port=8080
 
 # --- Database config
@@ -21,4 +24,3 @@ server.error.include-message=always
 
 # --- Logging
 logging.level.de.hft=DEBUG
-
